@@ -1,6 +1,7 @@
 SVN
 ---
 
+* [fabien] automatic support for created_at and updated_at columns (Propel + generator)
 * [fabien] renamed internal Log class to sfLog to avoid class name collision
 * [fabien] removed tiny mce from symfony package
 * [fabien] rich text support (tinymce) for textarea_tag helper
